<resources>
    <string name="app_name">Stem</string>
    <string name="getStarted">Get Started</string>
    <string name="getThings">Get things done with Stem</string>
    <string name="loginCap">LOGIN</string>
    <string name="login">Login</string>
    <string name="welcomeOn">Welcome Onboard!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="already">Already have an account? Login</string>
    <string name="welcomeBack">Welcome Back!</string>
    <string name="hello">hello</string>
    <string name="doNotHave">Dont have an account? Sign up </string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="enterEmail">Enter your email address:</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="home">Home</string>
    <string name="actions">Actions</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete account</string>
    <string name="settings">Settings</string>
    <string name="username">Username</string>
    <string name="example_task">Example Task</string>
    <string name="start">start</string>
    <string name="task">Task</string>
    <string name="view_all">View all</string>
    <string name="task_type">Task type</string>
    <string name="featured_task">Featured Task</string>
    <string name="stem_quiz">Stem Quiz</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="stem_task">Stem Task</string>
    <string name="name">Name</string>
    <string name="no">No</string>
    <string name="delete_account1">Delete Account?</string>
    <string name="are_you_sure_you_want_to_delete_your_account_this_will_permanently_erase_everything_in_your_account">Are you sure you want to delete your account? This will permanently erase everything in your account.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="level">Level</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="update_profile">Update Profile</string>
    <string name="my_stem_points">My Stem Points:</string>
    <string name="_0">0</string>
    <string name="quiz_level">Quiz level</string>
    <string name="example_quiz">Example Quiz</string>
    <string name="quit">Quit</string>
    <string name="question">Question?</string>
    <string name="_10">10</string>
    <string name="task_name">Task name</string>
    <string name="task_image">Task Image</string>
    <string name="description">Description</string>
    <string name="back">Back</string>
    <string name="already_done">Already Done</string>
    <string name="level_easy">Level: Easy</string>
    <string name="add_to_my_task">Add to my task</string>
    <string name="name_example">Name Example</string>
    <string name="rank">Rank</string>
    <string name="_1">1</string>
    <string name="user_place">User Place</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_1000">1000</string>
    <string name="your_place">Your Place</string>
    <string name="hello_ka_stem">Hello Ka-Stem</string>
    <string name="progress">Progress</string>
    <string name="task_achieved">Task Achieved</string>
    <string name="_36">36</string>
    <string name="_466">466</string>
    <string name="stem_points">Stem Points</string>
    <string name="error_message">Error</string>
    <string name="na">N/A</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="_50">50</string>
    <string name="_80">80</string>
    <string name="_250">250</string>
    <string name="level_average">Level: Average</string>
    <string name="easy">Easy</string>
    <string name="average">Average</string>
</resources>