<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="20dp"
    android:padding="20dp"
    android:id="@+id/dialogForgot"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialogBox"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/white_box">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/logout_text"
            android:text="@string/logout"
            android:padding="10dp"
            android:textSize="17sp"
            android:background="@drawable/green_round"
            android:textColor="@color/white"
            android:drawablePadding="8dp"
            app:layout_constraintTop_toTopOf="parent"/>


        <TextView
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="1dp"
            android:text="@string/are_you_sure_you_want_to_logout"
            android:textColor="@color/green"
            android:textSize="16sp"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logout_text"
            app:layout_constraintVertical_bias="0.193"
            tools:layout_editor_absoluteX="25dp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/btnBack"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="10dp"
            android:text="@string/no"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/desc"
            app:layout_constraintBottom_toBottomOf="@+id/dialogBox"
            app:layout_constraintEnd_toStartOf="@+id/btnLogout"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/btnLogout"
            android:text="@string/yes"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="40dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/dialogBox"
            app:layout_constraintStart_toEndOf="@+id/btnBack"/>

    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>