<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_margin="20dp"
    android:padding="20dp"
    android:id="@+id/dialogForgot"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialogBox"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/white_box">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/forgotTitle"
            android:text="@string/forgotPassword"
            android:padding="10dp"
            android:textSize="17sp"
            android:background="@drawable/green_round"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/baseline_lock_reset_24"
            android:drawablePadding="8dp"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/desc"
            android:text="@string/enterEmail"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="4dp"
            android:textSize="16sp"
            android:textColor="@color/green"
            app:layout_constraintTop_toBottomOf="@+id/forgotTitle"
            app:layout_constraintBottom_toBottomOf="@+id/emailBox"/>

        <EditText
            android:id="@+id/emailBox"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="35dp"
            android:backgroundTint="@color/green"
            android:hint="@string/enterEmail"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgotTitle" />

        <Button
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/btnCancel"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="10dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailBox"
            app:layout_constraintBottom_toBottomOf="@+id/dialogBox"
            app:layout_constraintEnd_toStartOf="@+id/btnReset"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/btnReset"
            android:text="@string/reset"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="40dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/dialogBox"
            app:layout_constraintStart_toEndOf="@+id/btnCancel"/>

    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>