<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Profile">

    <ScrollView
        android:id="@+id/scroll_profile"
        android:layout_width="match_parent"
        android:layout_height="675dp"
        app:layout_constraintTop_toTopOf="parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="This is a scrollable TextView" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_home_24" />

            <Button
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/nofill_green_corner"
                android:text="@string/username"
                android:textColor="@color/green"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <TextView
                android:layout_width="375dp"
                android:layout_height="match_parent"
                android:text="@string/settings"
                android:textColor="@color/green"
                android:textSize="28sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="300dp" />

            <Button
                android:id="@+id/logout_button_profile"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:onClick="logout" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <Button
                android:id="@+id/deleteAccountButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/delete_account"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:onClick="deleteAccount" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <!-- Add more UI elements here -->

        </LinearLayout>


    </ScrollView>

    <RelativeLayout
        android:id="@+id/relativeLayout_action"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:elevation="69dp">

        <!-- Fragment container to hold the different activities -->
        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <!-- Bottom navigation bar -->
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bottom_background"
            app:menu="@menu/bottom_menu"
            app:itemIconSize="30dp"
            app:itemIconTint="@drawable/item_selector"
            app:itemRippleColor="@android:color/transparent" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>